tests/cases/modules/ok/inline_file_helper.ari
pub fn value() -> i64 {
  return 9;
}

pub fn bonus() -> i64 {
  return 4;
}
