tests/cases/modules/errors/self_import.ari
mod self_import;

pub fn value() -> i64 {
  return 1;
}
